# OpenGrab

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  OpenGrab.spec  README.md  app.py  config.py  db.py  desktop.py  docker-compose.yml  download.py  engine_update.py  history_store.py  i18n.py  install.py  library_path_resolver.py  logging_setup.py  metrics.py  models.py  og_v1.2.1.patch  opengrab.iss  plan-dependabot-docker.txt  pyproject.toml  requirements.txt  routes.py  secure_delete.py  sqlite-schema.md  state.py  storage_manager.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: desktop.yml  docker.yml  engine-freshness.yml  security.yml  sourceforge.yml  test.yml  windows.yml
docker/: entrypoint.sh
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOY.md  INSTALL.md  OBSERVABILITY.md  SECURITY.md
docs/examples/: grafana-dashboard.json  opengrab.service
nginx/: opengrab.conf  ytgrab.conf
routers/: __init__.py  backup.py  channels.py  engine.py  history.py  jobs.py  playlist.py  settings.py  storage.py  system.py
scripts/: backup.sh  check.py  check_i18n.py  egress-lockdown.sh  engine_smoke.py  generate_icon.py  install.py  install.sh
static/: index.html  site.webmanifest  style.css
static/i18n/: en.json  es.json
static/js/: app.js  auth.js  channels.js  download.js  history.js  i18n.js  init.js  inspector.js  jobs.js  notifications.js  playlist.js  settings.js  storage.js  theme.js  utils.js
tests/: conftest.py  test_api.py  test_auth.py  test_auth_contract.py  test_backup.py  test_cancel.py  test_config.py  test_db.py  test_desktop.py  test_dispatch.py  test_download.py  test_e2e.py  test_engine_smoke.py  test_flush_pending.py  test_helpers.py  test_i18n.py  test_incognito.py  test_install.py  test_integration.py  test_limits.py  test_list_jobs.py  test_logging.py  test_metrics.py  test_middleware.py  test_models.py  test_move_file.py  test_secure_delete.py  test_state.py  test_tray.py  test_watch.py  test_workdir_reap.py
