[project]
name = "opengrab"
version = "1.7.0"
requires-python = ">=3.11"
description = "Self-hosted YouTube downloader — paste a URL, get an MP4"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "yt-dlp==2026.6.9",
    "slowapi>=0.1.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.15",
]
desktop = ["pywebview>=5.0", "pystray>=0.19"]
build = ["pyinstaller>=6.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "config", "db", "desktop", "download", "engine_update", "models", "routes", "state"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", "dist/", "build/"]

[[tool.mypy.overrides]]
module = ["webview", "webview.platforms.edgechromium", "pystray", "pystray._base", "PIL", "PIL.Image", "PIL.ImageDraw"]
ignore_missing_imports = true
