[project]
name = "opengrab"
version = "1.12.0"
requires-python = ">=3.12"
description = "Self-hosted YouTube downloader — paste a URL, get an MP4"
dependencies = [
    "fastapi>=0.136,<1.0",
    "uvicorn>=0.48,<1.0",
    "yt-dlp==2026.6.9",
    "slowapi>=0.1.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=2.1",
    "ruff>=0.8",
    "rich>=13",
    "pillow>=11",
]
desktop = ["pywebview>=5.0", "pystray>=0.19"]
build = ["pyinstaller>=6.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "config", "db", "desktop", "download", "engine_update", "i18n", "logging_setup", "models", "state"]
packages = ["routers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["scripts"]
markers = [
    "e2e: tests that download real videos from YouTube (slow, network-dependent)",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "UP",    # pyupgrade (modern Python idioms)
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", "dist/", "build/"]

[[tool.mypy.overrides]]
module = ["webview", "webview.platforms.edgechromium", "pystray", "pystray._base", "PIL", "PIL.Image", "PIL.ImageDraw", "rich", "rich.align", "rich.console", "rich.live", "rich.panel", "rich.progress", "rich.prompt", "rich.table"]
ignore_missing_imports = true
